# yt_grabber

./: auto_py_to_exe_conf.json  main.py  pyproject.toml
models/: video_info.py
services/: download_manager.py  metadata_handler.py
utils/: file_helper.py  url_validator.py
viewmodels/: __init__.py  main_viewmodel.py
views/: download_item_widget.py  main_window.py
