[project]
name = "yt-grabber"
version = "0.1.0"
description = "YouTube Video Download Program with GUI"
requires-python = ">=3.14"
dependencies = [
    "yt-dlp>=2024.11",
    "PySide6>=6.8",
    "static-ffmpeg>=3.0",
]

[project.optional-dependencies]
metadata = ["mutagen"]
thumbnail = ["pillow"]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.48.1",
]
